removing all generic classes - these are provided by feign-client-provider
Change-Id: I35d5cfe0ca4bc273b998101781ee2eeb69bba8c3

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     compile libraries.loggingApi
     compile libraries.jodaTime
 
+    testCompile "com.bol.feign:feign-client-provider:0.3"
+
     testCompile libraries.commonsIo
     testCompile libraries.junit
     testCompile libraries.spock
